# boreal_ndvi_trend

./: alg_config.yml  boreal_ndvi_trend.py  build_env.sh  calc_si.py  dependencies.yml  pyproject.toml  run.sh  run_si.sh
.github/workflows/: maap-publish.yml
