[project]
name = "boreal_ndvi_trend"
description = "Process Boreal HLS NDVI Temporal Trend"
readme = "README.md"
requires-python = ">=3.12"
dynamic = ["version"]

dependencies = [
    "maap-py>=4.2.0",
    "geopandas>=1.1.1",
    "scipy>=1.15.0",
    "earthaccess>=0.15.0",
    "gdal>=3.11.0",
]

[dependency-groups]
dev = [
    "ipython>=9.6.0",
    "jupyterlab>=4.4.10",
    "matplotlib>=3.10.7",
    "mypy>=1.18.2",
    "pre-commit>=4.3.0",
    "ruff>=0.14.3",
]

[tool.pdm.version]
source = "scm"

[tool.ruff]

[tool.ruff.format]
