[project]
name = "boreal_ndvi_trend"
description = "Process Boreal HLS NDVI Temporal Trend"
readme = "README.md"
requires-python = ">=3.12"
dynamic = ["version"]

dependencies = [
    "maap-py>=4.2.0",
    "geopandas>=1.1.1",
    "scipy>=1.15.0",
    "earthaccess>=0.15.0",
    "gdal>=3.11.0",
]

[tool.pdm.version]
source = "scm"

[tool.ruff]

[tool.ruff.format]
